feat: inclui relatorios de pagamento, despesas e lucro
