# internal/services/lote/routes.go
@@ -13,8 +13,15 @@ type Handler struct {
 	store LoteStore
 }
 
+type GastoMensal struct {
+	Mes int `json:"mes"`
+	Total float64 `json:"total_gasto"`
+	Quantidade uint `json:"lotes_comprados"`
+}
+
 type LoteStore interface {
 	GetAll(ctx context.Context, filter util.Filter) ([]model.Lote, error)
+	GetRelatorio(ctx context.Context) (map[uint]GastoMensal, error)
 	Create(ctx context.Context, props *model.Lote) error
 	GetByID(ctx context.Context, id int64) (*model.Lote, error)
 	Update(ctx context.Context, props *model.Lote) error
@@ -27,6 +34,7 @@ func NewHandler(store LoteStore) *Handler {
 
 func (h *Handler) RegisterRoutes(mux *http.ServeMux) {
 	mux.HandleFunc("GET /lotes", h.getAll)
+	mux.HandleFunc("GET /lotes/relatorio", h.getRelatorio)
 	mux.HandleFunc("POST /lotes", h.create)
 	mux.HandleFunc("GET /lotes/{id}", h.fetch)
 	mux.HandleFunc("PUT /lotes/{id}", h.update)
@@ -200,6 +208,26 @@ func (h *Handler) delete(w http.ResponseWriter, r *http.Request) {
 			util.ErrorJSON(w, "Lote not found.", http.StatusNotFound)
 			return
 		}
+		util.ErrorJSON(w, err.Error(), http.StatusUnprocessableEntity)
+		return
+	}
+
+	util.WriteJSON(w, http.StatusOK, model)
+}
+
+// @Summary Get Relatorio of Lotes spends
+// @Tags Lote
+// @Produce json
+// @Success 200 {object} map[string]GastoMensal
+// @Failure 400 {object} types.ErrorResponse
+// @Failure 422 {object} types.ErrorResponse
+// @Router /lotes/relatorio [get]
+func (h *Handler) getRelatorio(w http.ResponseWriter, r *http.Request) {
+	ctx, cancel := context.WithTimeout(r.Context(), util.RequestTimeout)
+	defer cancel()
+
+	model, err := h.store.GetRelatorio(ctx)
+	if err != nil {
 		util.ErrorJSON(w, err.Error(), http.StatusUnprocessableEntity)
 		return
 	}
